# Edison

./: build.sh
camera_stream/: package.xml  setup.py
camera_stream/camera_stream/: camera_publisher.py  camera_viewer.py  traffic_light_detector.py  traffic_light_viewer.py
edison/: CMakeLists.txt  package.xml
edison/launch/: display.launch.py  gazebo.launch.py
edison/urdf/: camera.xacro  edison.gazebo  edison.trans  edison.urdf.xacro  gps.xacro  materials.xacro  ros2_control.xacro
edison_navigation/: package.xml  setup.cfg  setup.py
edison_navigation/edison_navigation/launch/: navigation.launch.py
edison_navigation/edison_navigation/modules/: gps_handler.py  gps_simulator.py  traffic_sign_detector.py
motor_controller/: package.xml  setup.py
motor_controller/motor_controller/: motor_controller.py  motor_test.py
traffic_sign_detector/: fastdds.xml  package.xml  setup.cfg  setup.py
traffic_sign_detector/traffic_sign_detector/: detector_node.py
